turtleart.disktwo.DiskTwo.scala.error
Erreur de compilation :
DiskTwo:4: error: '=' expected but ';' found.
    for (j <- 1 to 20){
^